feat: add user apis
