# internal/domain/entity/user.go
@@ -1,6 +1,8 @@
 package entity
 
-import "time"
+import (
+	"time"
+)
 
 type User struct {
 	ID        int64
@@ -20,3 +22,20 @@ const (
 	UserStatusInactive UserStatus = "inactive"
 	UserStatusBanned   UserStatus = "banned"
 )
+
+func CreateUser(username, password, email string, status UserStatus) *User {
+	return &User{
+		Username: username,
+		Password: password,
+		Email:    email,
+		Status:   status,
+	}
+}
+
+func (u *User) Update(username, password, email string, status UserStatus) *User {
+	u.Username = username
+	u.Password = password
+	u.Email = email
+	u.Status = status
+	return u
+}
